double scrolling problem solved

--- a/attacthments/css/hero.css
+++ b/attacthments/css/hero.css
@@ -14,12 +14,6 @@
 html {
   scrollbar-width: none;
 }
-html,
-body {
-  width: 100%;
-  overflow-x: hidden; /* Prevent unwanted scrolling */
-  font: var(--ff);
-}
 
 :root {
   --ff: "Poppins", "sans-serif";
